# fastapi-api-fixes-features-sample-

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: aed6ce5401fd_initial_migration_users_and_tasks_tables.py
app/: main.py
app/api/: deps.py
app/api/routes/: auth.py  ops.py  tasks.py
app/core/: config.py  error_handlers.py  exceptions.py  jwt.py  logging.py  metrics.py  middleware.py  security.py
app/db/: session.py
app/db/models/: __init__.py  task.py  user.py
app/schemas/: __init__.py  common.py  task.py  user.py
app/services/: __init__.py  auth_service.py  task_query_service.py  task_service.py  user_service.py
scripts/: seed.py
tests/: conftest.py  test_advanced.py  test_auth.py  test_bulk.py  test_fixes.py  test_tasks.py
